<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rwsc_testback"
    android:gravity="center_horizontal"
    android:orientation="horizontal"
    android:paddingLeft="7dp"
    android:paddingRight="7dp" >
    
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="#FFF"
    >
     
    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"    
        android:layout_weight="1"
        android:paddingRight="5dp" 
        android:background="@drawable/details_section_bg"
        android:gravity="center_vertical"
         >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rwsc_bddh"
            
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call" 
             android:textSize="18sp"
            android:textColor="#000000"
             
            />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"    
        android:layout_weight="1"
        android:paddingRight="5dp" 
         android:background="@drawable/details_section_bg"
         android:gravity="center_vertical"
               >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rwsc_fsxx" 
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send" 
             android:textSize="18sp"
            android:textColor="#000000"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"    
        android:layout_weight="1"
        android:paddingRight="5dp"
         android:background="@drawable/details_section_bg"
         android:gravity="center_vertical"
               >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rwsc_tjlxr" 
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add" 
             android:textSize="18sp"
            android:textColor="#000000"
             />
        
        
    </LinearLayout>
     </LinearLayout>
</RelativeLayout>